# XClaudeDashboard

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
packaging/: nfpm.yaml.tmpl  xclaude.rb.tmpl
src/: aggregate.rs  app.rs  cli.rs  colors.rs  config.rs  db.rs  event.rs  format.rs  lib.rs  main.rs  pricing.rs  rate.rs  remote.rs  style.rs  tui.rs  ui.rs  widgets.rs  window.rs
src/widgets/: header.rs  legend.rs  stacked_bar.rs
tests/: smoke.rs
tests/fixtures/: litellm-sample.json
