[package]
name = "xclaude"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Real-time TUI dashboard for XClaudeUsage"
license = "MIT"
repository = "https://github.com/LLawli/XClaudeDashboard"
readme = "README.md"
keywords = ["claude", "tui", "dashboard", "usage", "terminal"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "xclaude"
path = "src/main.rs"

[dependencies]
ratatui            = "0.30"
crossterm          = { version = "0.29", features = ["event-stream"] }
ratatui-bubbletea-theme      = "0.2.0"
ratatui-bubbletea-components = "0.2.0"
rusqlite           = { version = "0.39", features = ["bundled"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
clap               = { version = "4", features = ["derive", "env"] }
color-eyre         = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs               = "6"
futures            = "0.3"
time               = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
uuid               = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
